--- a/0x00-html_advanced/17-index.html
+++ b/0x00-html_advanced/17-index.html
@@ -29,13 +29,14 @@
       <h1>Homepage</h1>
       <aside>Aside</aside>
 
-      <!-- Services section -->
+       <!-- Hero section -->
       <section>
         <div>
           <h2>We help you build your brand!</h2>
         </div>
       </section>
 
+      <!-- Services section -->
       <section>
         <div>
           <header>
