--- a/0x00-html_advanced/5-index.html
+++ b/0x00-html_advanced/5-index.html
@@ -15,8 +15,7 @@
   </head>
   <body>
     <header>Header</header>
-    <main>Main content
-        <aside>Aside</aside>
+    <main>
         <section>Hero section</section>
         <section>Services section</section>
         <section>Works section</section>
