--- a/0x00-html_advanced/18-index.html
+++ b/0x00-html_advanced/18-index.html
@@ -31,7 +31,7 @@
       <h1>Homepage</h1>
       <aside>Aside</aside>
 
-      <!-- Services section -->
+      <!-- Hero section -->
       <section>
         <div>
           <h2>We help you build your brand!</h2>
